# cheese-dev

./: .gitignore  Cargo.toml  LICENSE  cheese_data.ron  cheese_data1.ron  cheese_data_back_739074.ron  cheese_data_pre_alan.ron  run.sh  rustfmt.toml
bot/: Cargo.toml
bot/src/: bill_commands.rs  bot_data.rs  create_commands.rs  decree.rs  general_commands.rs  main.rs  organisation_commands.rs  parliament_commands.rs  role_commands.rs  utilities.rs
discord/: Cargo.toml
discord/src/: lib.rs  requests.rs  websocket_handle.rs
discord/src/discord_structs/: application_commands.rs  gateway.rs  intents.rs  message_components.rs  messages.rs  mod.rs  threads.rs  user.rs
proc-macros/: Cargo.toml
proc-macros/src/: builder_pattern.rs  lib.rs  request_builder.rs  serialise_tag.rs
