[package]
name = "discord"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macros = { path = "./../proc-macros" }

serde = {version="*", features = ["derive"] }
serde_repr = "0.1"
serde_json = "*"

hyper = { version = "*", features = ["client", "http1", "tcp"] }
hyper-tls = "*"
tokio = "*"
async-channel = "*"
tokio-tungstenite = { version = "*", features = ["native-tls"] }
futures-util = "*"
url = "*"

log = "*"
chrono = "*"
