[package]
name = "discord"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macros = { path = "./../proc-macros" }

serde = {version="*", features = ["derive"] }
serde_repr = "0.1"
serde_json = "*"

hyper = { version = "1.4", features = ["client", "http1",] }
hyper-util = { version = "*", features = ["client", "client-legacy", "tokio", "http1"] }
http-body-util = "0.1"
hyper-rustls = "*"
tokio = "1.13"
async-channel = "*"
tokio-tungstenite = { version = "0.23", features = ["native-tls"] }
futures-util = "*"
url = "*"

log = "*"
chrono = "*"
